# iota-sdk-evm

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
bindings/core/: Cargo.toml
bindings/core/src/: error.rs  lib.rs  panic.rs  response.rs
bindings/core/src/method/: api.rs  mod.rs  utils.rs
bindings/core/src/method_handler/: api.rs  call_method.rs  mod.rs  utils.rs
bindings/core/tests/: api.rs
bindings/nodejs/: Cargo.toml  README.md  build.rs  package.json
bindings/nodejs/examples/: package.json
bindings/nodejs/examples/basic/: basic.ts  node.ts
bindings/nodejs/examples/evm/: send-evm-transaction.ts
bindings/nodejs/examples/example-walletdb/: 000074.sst  IDENTITY  LOG  LOG.old.1705066423089069  LOG.old.1705066442844499  LOG.old.1705066591584279  LOG.old.1705066708480468  LOG.old.1705066760453927  LOG.old.1705066838510947  LOG.old.1705066904165286  LOG.old.1705067092048682  LOG.old.1705067447347073  LOG.old.1705073744937047  LOG.old.1705075140502440  LOG.old.1705321026331102  MANIFEST-000071
bindings/nodejs/lib/: bindings.ts  constants.ts  index.ts  logger.ts
bindings/nodejs/lib/api/: api-method-handler.ts  api.ts  index.ts
bindings/nodejs/lib/types/: address.ts  assets.ts  contracts.ts  index.ts  logger-config.ts
bindings/nodejs/lib/types/api/: index.ts  info.ts
bindings/nodejs/lib/types/api/bridge/: api.ts  index.ts
bindings/nodejs/lib/types/utils/: contract-identity.ts  index.ts  request-metadata.ts
bindings/nodejs/lib/types/utils/bridge/: index.ts  utils.ts
bindings/nodejs/lib/utils/: index.ts  utils.ts
bindings/nodejs/src/: api.rs  error.rs  lib.rs  utils.rs
bindings/nodejs/tests/: customMatchers.ts
bindings/nodejs/tests/api/: addresses.spec.ts  examples.spec.ts  infoMethods.spec.ts  messageMethods.spec.ts  outputBuilders.spec.ts  utilityMethods.spec.ts  utxoMethods.spec.ts
bindings/nodejs/tests/utils/: wallet.spec.ts
bindings/wasm/: Cargo.toml  README.md  package.json
bindings/wasm/build_scripts/: node.js  web.js
bindings/wasm/examples/: node.js
bindings/wasm/lib/: bindings.ts
bindings/wasm/src/: api.rs  lib.rs  utils.rs
bindings/wasm/tests/: api.spec.ts  utilityMethods.spec.ts
sdk/: Cargo.toml  README.md
sdk/examples/: .env.example  basic.rs  deposit_base_token.rs  node.rs  send_native_token.rs  send_nft.rs
sdk/examples/helper/: create_native_token.rs  create_wallet.rs
sdk/examples/utilities/: create_account.rs  create_native_token.rs  create_nft.rs
sdk/src/: buffer.rs  constants.rs  error.rs  lib.rs  main.rs
sdk/src/api/: mod.rs
sdk/src/api/node/: http_client.rs  mod.rs
sdk/src/api/node_manager/: mod.rs
sdk/src/api/responses/: mod.rs
sdk/src/contracts/: core.rs  mod.rs
sdk/src/metadata/: assets.rs  contract_identity.rs  mod.rs  request_metadata.rs
sdk/src/special/: gas.rs  mod.rs  num.rs  u256.rs  unsigned64.rs
