[workspace]
resolver = "2"
members = [
	"bindings/nodejs",
	"bindings/wasm",
	"sdk",
]

# Necessary to get coverage to work as for some reason using a custom profile breaks it
[profile.test]
debug = 0
incremental = false

[profile.ci]
inherits = "dev"
debug = 0
incremental = false

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
strip = "symbols"
