[package]
name = "iota-sdk-evm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-sdk = { path = "../../iota-sdk/sdk", default-features = false, features = [ "tls", "wallet", "stronghold", "rand", "storage" ] }
tokio = { version = "1.26" }
dotenvy = { version = "0.15" }
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value"] }
hex = "0.4.3"
thiserror = { version = "1.0.40" }
iota-crypto = { version = "0.23.0", default-features = false, features = [
    "blake2b"
] }

[[example]]
name = "basic"
path = "examples/basic.rs"