[package]
name = "iota-sdk-evm"
version = "0.1.0"
edition = "2021"

[dependencies]
iota-sdk = { version = "1.1.4", default-features = false, features = [ "tls", "wallet", "rand" ] }
tokio = { version = "1.26" }
dotenvy = { version = "0.15" }
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value"] }
hex = "0.4.3"
prefix-hex = "0.7"
reqwest = { version = "0.11.15" }
url = { version = "2.3.1" }
instant = { version = "0.1.12" }
log = { version = "0.4.17" }
thiserror = { version = "1.0.40" }
iota-crypto = { version = "0.23.0", default-features = false, features = [
    "blake2b"
] }

[dev-dependencies]
iota-sdk = { version = "1.1.4", default-features = false, features = [ "rocksdb", "stronghold", "irc_30" ] }

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "deposit_base_token"
path = "examples/deposit_base_token.rs"

[[example]]
name = "node"
path = "examples/node.rs"

# Helper examples

[[example]]
name = "helper_create_wallet"
path = "examples/helper/create_wallet.rs"

[[example]]
name = "helper_create_native_token"
path = "examples/helper/create_native_token.rs"
